Quick fix to sticky header scrolling offscreen

--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -1,7 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body {
+html {
     height: 100%;
+}
+
+html, body {
+    min-height: 100%;
     box-sizing: border-box;
     position: relative;
 
